--- a/uniform.html
+++ b/uniform.html
@@ -126,21 +126,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Welcome%201.jpg" alt=" " class="center" />
-                    <p>
+                    <img src="images/Uniform_1.jpg" alt=" " class="center" />
+                    <div class="center">
+                        <br>
                         <h3>School Dress Code and Uniforms</h3>
                         <br>
-                        <span>At JCS we encourage an element of individuality with our school uniform. The JCS colours are dark blue, yellow and white and the uniform fabric is available for purchase from the school office.  A yellow and white cotton batik fabric is available for shirts, dresses and pinafores, and a dark blue cotton drill is available for skirts, shorts and pants. The fabric is sold in pre-cut lengths to be sewn as desired. JCS does not prescribe the style of school clothing, but as a general guideline school clothing should be simple, functional and appropriate.
+                        <span>At JCS we encourage an element of individuality with our school uniform. The JCS colours are dark blue, yellow and white and the uniform fabric is available for purchase from the school office.  A yellow and white cotton batik fabric is available for shirts, dresses and pinafores, and a dark blue cotton drill is available for skirts, shorts and pants. The fabric is sold in pre-cut lengths to be sewn as desired. JCS does not prescribe the style of school clothing, but as a general guideline should be simple, functional and appropriate.
                         <br>
+                            <br>
+                                 <img src="images/Uniform_2.jpg" alt=" " class="center" />
                              <br>
                         Footwear should be simple, safe and comfortable. In the interest of safety, sandals should have a back strap. Flip-flops are not allowed. Students are encouraged to bring indoor shoes, particularly during the rainy season.
 
                         <br>
+                         
+                            
                         <br>For PE, students are required to wear navy leggings or shorts, their house T shirt and appropriate sports shoes. 
                     </span>
 
 
-                    </p>
+                    </div>
                     <div class="clearfix"> </div>
                 </div>
             </div>
