--- a/lunches.html
+++ b/lunches.html
@@ -126,8 +126,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Welcome%201.jpg" alt=" " class="center" />
-                    <p>
+                    <img src="images/Lunches.jpg" alt=" " class="center" />
+                    <div class="center">
+                        <br>
                         <h3>Lunches and Snack</h3>
                         <br>
                         <span>JCS promotes healthy eating at school. We encourage healthy lunches and snacks as well as offering children the opportunity to sample new and exciting fruits on our ‘Fruity Fridays’. JCS does not have an onsite canteen. Parents are responsible for providing their child with healthy snacks and lunch to bring to school. Candy, chewing gum and fizzy drinks are not allowed.
@@ -141,7 +142,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </span>
 
 
-                    </p>
+                    </div>
                     <div class="clearfix"> </div>
                 </div>
             </div>
