Fixed ECO, Pastoral and Vision

--- a/merits.html
+++ b/merits.html
@@ -126,8 +126,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Welcome%201.jpg" alt=" " class="center" />
-                    <p>
+                    <img src="images/Merits.jpg" alt=" " class="center" />
+                    <br>
+                    <div class="center">
                         <h3>Merits and Dojos</h3>
                         <br>
                         <span>Celebrating students achievements, whether it is for academic performance or for student life and community spirit, reinforces positive behaviour and work ethic. Here at JCS we reward our team and community spirit through the House system. Secondary students are also awarded merit points for academic work if it is an outstanding piece, or if that the student has shown real improvement or effort. This is a way of recognising individual as well as group achievement. 
@@ -138,25 +139,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <br>
 
                     </span>
-                    </p>
-                    <div class="clearfix"> </div>
+
+                        <div class="clearfix"> </div>
+                    </div>
                 </div>
+                <div class="clearfix"> </div>
+
+
             </div>
-            <div class="clearfix"> </div>
-
-
         </div>
-    </div>
-    <!-- //single -->
-    <!-- footer -->
-    <div class="footer w3layouts">
-        <div class="container">
-            <div class="footer-agileinfo">
-                <div class="col-md-10 col-sm-6 footer-grid">
-                    <h3>Location</h3>
-                    <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
-                </div>
-                <!--
+        <!-- //single -->
+        <!-- footer -->
+        <div class="footer w3layouts">
+            <div class="container">
+                <div class="footer-agileinfo">
+                    <div class="col-md-10 col-sm-6 footer-grid">
+                        <h3>Location</h3>
+                        <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
+                    </div>
+                    <!--
 				<div class="col-md-5 col-sm-6 footer-grid footer-tags">
 					<h3>Navigation</h3>
 					<ul>
@@ -164,74 +165,74 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</ul>
 				</div>
 -->
-                <div class="col-md-2 col-sm-6 footer-grid w3social">
-                    <h3>Media</h3>
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
-                    </ul>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
-    </div>
-    <!-- //footer -->
-    <!-- modal-about -->
-    <div class="modal bnr-modal fade" id="myModal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <div class="modal-body modal-spa">
-                    <img src="images/img2.jpg" class="img-responsive" alt="" />
-                    <h4>Cras rutrum iaculis enim</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at. Donec fringilla lacus eu pretium rutrum. Cras aliquet congue ullamcorper. Etiam mattis eros eu ullamcorper volutpat. Proin ut dui a urna efficitur varius miet congue consectetur adipiscing. <br>Uisque molestie cursus miet congue consectetur adipiscing elit cras rutrum iaculis enim, Lorem ipsum dolor sit amet, non convallis felis mattis at. Maecenas sodales tortor ac ligula ultrices dictum et quis urna. Etiam pulvinar metus neque, eget porttitor massa vulputate in. Fusce lacus purus, pulvinar ut lacinia id, sagittis eu mi. Vestibulum eleifend massa sem, eget dapibus turpis efficitur at. </p>
+                    <div class="col-md-2 col-sm-6 footer-grid w3social">
+                        <h3>Media</h3>
+                        <ul>
+                            <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
+                        </ul>
+                    </div>
+                    <div class="clearfix"> </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- //modal-about -->
-    <!-- start-smooth-scrolling -->
-    <script src="js/SmoothScroll.min.js"></script>
-    <script type="text/javascript" src="js/move-top.js"></script>
-    <script type="text/javascript" src="js/easing.js"></script>
-    <script type="text/javascript">
-        jQuery(document).ready(function($) {
-            $(".scroll").click(function(event) {
-                event.preventDefault();
+        <!-- //footer -->
+        <!-- modal-about -->
+        <div class="modal bnr-modal fade" id="myModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body modal-spa">
+                        <img src="images/img2.jpg" class="img-responsive" alt="" />
+                        <h4>Cras rutrum iaculis enim</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at. Donec fringilla lacus eu pretium rutrum. Cras aliquet congue ullamcorper. Etiam mattis eros eu ullamcorper volutpat. Proin ut dui a urna efficitur varius miet congue consectetur adipiscing. <br>Uisque molestie cursus miet congue consectetur adipiscing elit cras rutrum iaculis enim, Lorem ipsum dolor sit amet, non convallis felis mattis at. Maecenas sodales tortor ac ligula ultrices dictum et quis urna. Etiam pulvinar metus neque, eget porttitor massa vulputate in. Fusce lacus purus, pulvinar ut lacinia id, sagittis eu mi. Vestibulum eleifend massa sem, eget dapibus turpis efficitur at. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- //modal-about -->
+        <!-- start-smooth-scrolling -->
+        <script src="js/SmoothScroll.min.js"></script>
+        <script type="text/javascript" src="js/move-top.js"></script>
+        <script type="text/javascript" src="js/easing.js"></script>
+        <script type="text/javascript">
+            jQuery(document).ready(function($) {
+                $(".scroll").click(function(event) {
+                    event.preventDefault();
 
-                $('html,body').animate({
-                    scrollTop: $(this.hash).offset().top
-                }, 1000);
-            });
-        });
-
-    </script>
-    <!-- //end-smooth-scrolling -->
-    <!-- smooth-scrolling-of-move-up -->
-    <script type="text/javascript">
-        $(document).ready(function() {
-            /*
-            var defaults = {
-            	containerID: 'toTop', // fading element id
-            	containerHoverID: 'toTopHover', // fading element hover id
-            	scrollSpeed: 1200,
-            	easingType: 'linear' 
-            };
-            */
-
-            $().UItoTop({
-                easingType: 'easeOutQuart'
+                    $('html,body').animate({
+                        scrollTop: $(this.hash).offset().top
+                    }, 1000);
+                });
             });
 
-        });
+        </script>
+        <!-- //end-smooth-scrolling -->
+        <!-- smooth-scrolling-of-move-up -->
+        <script type="text/javascript">
+            $(document).ready(function() {
+                /*
+                var defaults = {
+                	containerID: 'toTop', // fading element id
+                	containerHoverID: 'toTopHover', // fading element hover id
+                	scrollSpeed: 1200,
+                	easingType: 'linear' 
+                };
+                */
 
-    </script>
-    <!-- //smooth-scrolling-of-move-up -->
-    <!-- Bootstrap core JavaScript
+                $().UItoTop({
+                    easingType: 'easeOutQuart'
+                });
+
+            });
+
+        </script>
+        <!-- //smooth-scrolling-of-move-up -->
+        <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.js"></script>
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
