--- a/events.html
+++ b/events.html
@@ -126,7 +126,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Welcome%201.jpg" alt=" " class="center" />
+                    <img src="images/Events3.jpg" alt=" " class="center" />
                     <p>
                         <div class="center">
                             <h3>School Events
@@ -135,11 +135,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <span>Here at JCS we value the community spirit brought by our families and there is no better opportunity to witness this than at our school special events. Our calendar includes many different special events throughout the year: Athletics and Swimming Carnivals, Book Week, Indonesia Week, Morning at the Museum and Indonesia Week. JCS events are fun family events where all members of our community are invited to attend and be involved.
                         <br>
                              <br>
+                                <img src="images/Events_2.jpg" alt=" " class="center" />
+                                <br><br>
+                                
              Event dates are placed on the school calendar and invitations are sent out nearer to an event. Please take a look at our photograph gallery for some of the events we have hosted for our families.
 
                         <br>
                         <br>
 
+                                <img src="images/events1.jpg" alt=" " class="center" />
+                                
                     </span>
                         </div>
                     </p>
