--- a/secondary.html
+++ b/secondary.html
@@ -186,11 +186,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </ul>
              This academic programme is supported by non-examined subjects such as ICT, Art, Music and Dance and PE which give students a balance whilst maintaining the breadth of study and knowledge to make future decisions.
                     <br><br>
-                 Key Stage 4 is a significant and influential stage of a student’s academic journey as students begin to make personal choices about the subjects they wish to study at A Level.  Students learn to become more independent and start to develop a more clearly defined sense of direction for the future.  Information and guidance about A Level options and careers becomes a key focus both academically and pastorally.  Subject teachers and tutors to encourage students to explore and discuss choices and opportunities open to them, whilst taking into consideration their personal strengths and ambitions.
+                 Key Stage 4 is a significant and influential stage of a student’s academic journey as students begin to make personal choices about the subjects they wish to study at A Level.  Students learn to become more independent and start to develop a more clearly defined sense of direction for the future.  Information and guidance about A Level options and careers becomes a key focus both academically and pastorally.  Subject teachers and tutors encourage students to explore and discuss choices and opportunities open to them, whilst taking into consideration their personal strengths and ambitions.
                                 
                    <br> <br> 
-           While academic success at IGCSE level is of paramount importance, the Key Stage 4 experience also focuses on developing the whole student and so particular emphasis is placed on the enrichment and Personal, Social, Health & Economic Education (PSHE) programmes, tailored to suit the needs of students at this stage of their life. Class teachers work closely with students both mentoring them for the IGCSE programme and also offering guidance of future option pathways. 
-                                   
+                       While academic success at IGCSE level is of paramount importance, the Key Stage 4 experience also focuses on developing the whole student and so particular emphasis is placed on the enrichment and Personal, Social, Health & Economic Education (PSHE) programmes, tailored to suit the needs of students at this stage of their life. Class teachers work closely with students both mentoring them for the IGCSE programme and also offering guidance of future option pathways. 
+
                         <br>   
                         <br>
                         <img src="images/Secondary_3.jpg" alt=" " class="center" />
