--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">Admissions</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Admissions</a></li>
+                                        <li><a href="admissions.html">Admissions Procedures</a></li>
+                                        <li><a href="icons.html">Tuiton Fees</a></li>
                                     </ul>
                                 </li>
 
@@ -233,7 +234,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <a href="single.html"><img src="images/ruru_louise.jpg" class="img-responsive zoom-img"  alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
-                            <h4><a href="single.html">Calendar</a></h4>
+                            <h4><a href="calendar.html">Calendar</a></h4>
                             <p>2017 - 2018 Calendar
                                 <br> 2018 - 2019 Calendar
                             </p>
@@ -243,11 +244,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-4 news-w3lgrids">
                     <div class="news-gridtext">
                         <div class="news-w3img">
-                            <a href="single.html"><img src="images/squares/events1.jpg" class="img-responsive zoom-img" alt=""/></a>
+                            <a href="events.html"><img src="images/squares/events1.jpg" class="img-responsive zoom-img" alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
                             <!--							<h5 class="w3-agilep">Nov 4, 2016</h5>-->
-                            <h4><a href="single.html">Special Events</a></h4>
+                            <h4><a href="events.html">Special Events</a></h4>
                             <p>Events and activities enriching our children's learning</p>
                             <!--							<a class="w3-agilebtn" href="single.html"><span>Read More</span></a> -->
                         </div>
