Fixed welcome header

--- a/welcome.html
+++ b/welcome.html
@@ -65,22 +65,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">About</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="welcome.html">Welcome</a></li>
-                                        <li><a href="codes.html">Vision and Mission</a></li>
-                                        <li><a href="codes.html">Governance</a></li>
-                                        <li><a href="codes.html">PTA</a></li>
+                                        <li><a href="vision.html">Vision and Mission</a></li>
+                                        <li><a href="governance.html">Governance</a></li>
+                                        <li><a href="pta.html">PTA</a></li>
                                         <li><a href="enviromental_mindfulness.html">Eco Awareness</a></li>
-                                        <li><a href="codes.html">Recruitment</a></li>
+                                        <li><a href="recruitment.html">Recruitment</a></li>
                                     </ul>
                                 </li>
                                 <!--							<li><a href="about.html">Curriculum</a></li> -->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="icons.html">Our Curriculum</a></li>
-                                        <li><a href="codes.html">EYFS</a></li>
-                                        <li><a href="codes.html">Primary</a></li>
-                                        <li><a href="codes.html">Secondary</a></li>
-                                        <li><a href="codes.html">Bahasa Indonesia</a></li>
-                                        <li><a href="codes.html">Pastoral Care</a></li>
+                                        <li><a href="eyfs.html">EYFS</a></li>
+                                        <li><a href="primary.html">Primary</a></li>
+                                        <li><a href="secondary.html">Secondary</a></li>
+                                        <li><a href="bahasaIndonesia.html">Bahasa Indonesia</a></li>
+                                        <li><a href="pastoral.html">Pastoral Care</a></li>
                                     </ul>
                                 </li>
 
@@ -88,20 +88,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">School Life</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="icons.html">Calendar</a></li>
-                                        <li><a href="codes.html">Times of the Day</a></li>
-                                        <li><a href="codes.html">Lunches & Snackes</a></li>
-                                        <li><a href="codes.html">House System</a></li>
-                                        <li><a href="codes.html">Merits and Dojos</a></li>
-                                        <li><a href="codes.html">After School Activities</a></li>
-                                        <li><a href="codes.html">Special Events</a></li>
-                                        <li><a href="codes.html">Uniform</a></li>
+                                        <li><a href="times.html">Times of the Day</a></li>
+                                        <li><a href="lunches.html">Lunches & Snack</a></li>
+                                        <li><a href="houses.html">House System</a></li>
+                                        <li><a href="merits.html">Merits and Dojos</a></li>
+                                        <li><a href="asa.html">After School Activities</a></li>
+                                        <li><a href="events.html">Special Events</a></li>
+                                        <li><a href="uniform.html">Uniform</a></li>
                                     </ul>
                                 </li>
 
 
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">Admissions</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Admissions</a></li>
+                                        <li><a href="admissions.html">Admissions Procedures</a></li>
+                                        <li><a href="icons.html">Tuiton Fees</a></li>
                                     </ul>
                                 </li>
 
@@ -126,23 +127,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Welcome%201.jpg" alt=" " class="img-responsive" />
-                    <p><span><strong>Welcome to JCS</strong></span>
-                        <span>Watching our children move through their school years must seem a world apart from how we were educated. As technology continues to expand our world it is important to remember we are all part of a global society and as such, it is our duty to prepare today’s children for this. Rabindranath Tagore put this into context when he said “Don’t limit a child to your own learning, for he was born in another time.”
+                    <div class="center">
+                        <img src="images/Welcome%201.jpg" alt=" " class="img-responsive" />
+                        <p><span><strong>Welcome to JCS</strong></span>
+                            <span>Watching our children move through their school years must seem a world apart from how we were educated. As technology continues to expand our world it is important to remember we are all part of a global society and as such, it is our duty to prepare today’s children for this. Rabindranath Tagore put this into context when he said “Don’t limit a child to your own learning, for he was born in another time.”
                     </span>
-                        <span>Having over 30 years teaching experience I have witnessed many changes and approaches in the way children are taught. One thing that never changes is the belief that children should be placed the at heart of the education process. No two children are the same; they learn and progress differently. As such, a school should foster the development of inquiry, critical thinking and creativity within a structured yet broad-based curriculum where we aim to inspire, motivate and challenge children in all aspects of learning.
+                            <span>Having over 30 years teaching experience I have witnessed many changes and approaches in the way children are taught. One thing that never changes is the belief that children should be placed the at heart of the education process. No two children are the same; they learn and progress differently. As such, a school should foster the development of inquiry, critical thinking and creativity within a structured yet broad-based curriculum where we aim to inspire, motivate and challenge children in all aspects of learning.
                     </span>
-                        <br>
-                        <img src="images/Welcome%202.jpg" alt=" " class="img-responsive" />
-                        <br>
-                        <span>Beyond academic expectations a school should also focus on personal and social development. We want our children to be confident, considerate, respectful and globally aware. Such skills are developed through relationships established between teachers and students and between students themselves. Working alongside the Board, teachers, students and parents, I will continue the excellent work that has already been carried out at JCS in pursuing these goals for all our children. 
+                            <br>
+                            <img src="images/Welcome%202.jpg" alt=" " class="img-responsive" />
+                            <br>
+                            <span>Beyond academic expectations a school should also focus on personal and social development. We want our children to be confident, considerate, respectful and globally aware. Such skills are developed through relationships established between teachers and students and between students themselves. Working alongside the Board, teachers, students and parents, I will continue the excellent work that has already been carried out at JCS in pursuing these goals for all our children. 
                     </span>
-                        <span>
+                            <span>
                     Working with the JCS community is a privilege for me. This is a young school that has grown and flourished in its first five years. The possibilities of what we can achieve as a school, a community and as individuals are constantly evolving. Our children are global citizens and as such, JCS wants to ensure it gives them the skills to succeed in a world that many of us only dreamed of in our own school days.
                     </span>
-                        <br> Jane Greenwood
+                            <br> Jane Greenwood
 
-                    </p>
+                        </p>
+                    </div>
                     <div class="clearfix"> </div>
                 </div>
             </div>
