--- a/vision.html
+++ b/vision.html
@@ -40,9 +40,84 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <body>
 
-    <?php include('header.php') ?>
+    <!-- header -->
+    <div class="header-w3layoutstop">
+        <div class="container">
+            <!-- navigation -->
+            <div class="top-nav w3-agiletop">
+                <div class="container">
+                    <div class="navbar-header w3llogo">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <div class="hdr-w3left navbar-left">
+                            <a href="index.html"><img src=images/logo_jcs_helv.png></a>
+                        </div>
+                        <div class="w3menu navbar-right">
+                            <ul class="nav navbar">
+                                <!--							<li><a href="index.html" class="active">About</a></li>-->
+                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">About</span><span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="welcome.html">Welcome</a></li>
+                                        <li><a href="vision.html">Vision and Mission</a></li>
+                                        <li><a href="governance.html">Governance</a></li>
+                                        <li><a href="pta.html">PTA</a></li>
+                                        <li><a href="enviromental_mindfulness.html">Eco Awareness</a></li>
+                                        <li><a href="recruitment.html">Recruitment</a></li>
+                                    </ul>
+                                </li>
+                                <!--							<li><a href="about.html">Curriculum</a></li> -->
+                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="icons.html">Our Curriculum</a></li>
+                                        <li><a href="eyfs.html">EYFS</a></li>
+                                        <li><a href="primary.html">Primary</a></li>
+                                        <li><a href="secondary.html">Secondary</a></li>
+                                        <li><a href="bahasaIndonesia.html">Bahasa Indonesia</a></li>
+                                        <li><a href="pastoral.html">Pastoral Care</a></li>
+                                    </ul>
+                                </li>
+
+                                <!--                            <li><a href="gallery.html">School Life</a></li>-->
+                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">School Life</span><span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="icons.html">Calendar</a></li>
+                                        <li><a href="times.html">Times of the Day</a></li>
+                                        <li><a href="lunches.html">Lunches & Snack</a></li>
+                                        <li><a href="houses.html">House System</a></li>
+                                        <li><a href="merits.html">Merits and Dojos</a></li>
+                                        <li><a href="asa.html">After School Activities</a></li>
+                                        <li><a href="events.html">Special Events</a></li>
+                                        <li><a href="uniform.html">Uniform</a></li>
+                                    </ul>
+                                </li>
 
 
+                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">Admissions</span><span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="admissions.html">Admissions Procedures</a></li>
+                                        <li><a href="icons.html">Tuiton Fees</a></li>
+                                    </ul>
+                                </li>
+
+
+                                <li><a href="contact.html">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                </div>
+            </div>
+            <!-- //navigation -->
+        </div>
+    </div>
+    <!-- //header -->
     <!-- single -->
     <div class="single about">
         <div class="container">
