+ Proper Times picture

--- a/times.html
+++ b/times.html
@@ -126,7 +126,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Welcome%201.jpg" alt=" " class="center" />
+                    <img src="images/times.JPG" alt=" " class="center" />
                     <p>
                         <div class="center">
                             <h3>The School Day
