--- a/uniform.html
+++ b/uniform.html
@@ -131,7 +131,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <br>
                         <h3>School Dress Code and Uniforms</h3>
                         <br>
-                        <span>At JCS we encourage an element of individuality with our school uniform. The JCS colours are dark blue, yellow and white and the uniform fabric is available for purchase from the school office.  A yellow and white cotton batik fabric is available for shirts, dresses and pinafores, and a dark blue cotton drill is available for skirts, shorts and pants. The fabric is sold in pre-cut lengths to be sewn as desired. JCS does not prescribe the style of school clothing, but as a general guideline should be simple, functional and appropriate.
+                        <span>At JCS we encourage an element of individuality with our school uniform. The JCS colours are dark blue, yellow and white and the uniform fabric is available for purchase from the school office.  A yellow and white cotton batik fabric is available for shirts, dresses and pinafores, and a dark blue cotton drill is available for skirts, shorts and pants. The fabric is sold in pre-cut lengths to be sewn as desired. JCS does not prescribe the style of school clothing, but as a general guideline it should be simple, functional and appropriate.
                         <br>
                             <br>
                                  <img src="images/Uniform_2.jpg" alt=" " class="center" />
