--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <!--                            <li><a href="gallery.html">School Life</a></li>-->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">School Life</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="icons.html">Calendar</a></li>
+                                        <li><a href="calendar.html">Calendar</a></li>
                                         <li><a href="times.html">Times of the Day</a></li>
                                         <li><a href="lunches.html">Lunches & Snack</a></li>
                                         <li><a href="houses.html">House System</a></li>
