--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-4 news-w3lgrids">
                     <div class="news-gridtext">
                         <div class="news-w3img">
-                            <a href="single.html"><img src="images/ruru_louise.jpg" class="img-responsive zoom-img"  alt=""/></a>
+                            <a href="calendar.html"><img src="images/ruru_louise.jpg" class="img-responsive zoom-img"  alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
                             <h4><a href="calendar.html">Calendar</a></h4>
@@ -257,11 +257,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-4 news-w3lgrids">
                     <div class="news-gridtext">
                         <div class="news-w3img">
-                            <a href="single.html"><img src="images/xavier.jpg" class="img-responsive zoom-img" alt=""/></a>
+                            <a href="gallery.html"><img src="images/xavier.jpg" class="img-responsive zoom-img" alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
                             <!--							<h5 class="w3-agilep">Sept 21, 2016</h5>-->
-                            <h4><a href="single.html">Gallery</a></h4>
+                            <h4><a href="gallery.html">Gallery</a></h4>
                             <p>Photographs of our school, learning and special events</p>
                             <!--							<a class="w3-agilebtn" href="single.html"><span>Read More</span></a>-->
                         </div>
